#1219 * Add setting to avoid post-it rotation. * Use it on all post-it rendering. * Avoid wrapping on post-it color settings.
git-svn-id: https://svn.ociotec.com/Software/Web/Redmine/plugins/scrum/trunk@1948 1633e602-76eb-4acd-8a1c-850ebfcfe024

--- a/assets/stylesheets/scrum.css
+++ b/assets/stylesheets/scrum.css
@@ -87,6 +87,7 @@
 
 .settings-post-it {
 	margin-right: 20px;
+	white-space: nowrap;
 }
 
 .post-it-color-1 {
